Dealer setup added